# py-gottani

./: .gitignore  README.md  centroids.pt  classify.py  deduplicate.py  download_xbookmark.py  main.py  pyproject.toml
.agents/: AGENTS.md
scratch/: facenet_features.pt
src/: classify.py  clip_interrogate_folder.py  clip_utils.py  cluster_images.py  deduplicate.py  download_xbookmark.py  image_utils.py  sort_by_similarity.py  trim_margin.py  video_info_to_csv.py  yolo_utils.py
src/utils/: clip.py  facenet.py  image.py  yolo.py
