[project]
name = "py-gottani"
version = "0.1.0"
description = "Gottani Python Codes"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pillow>=12.2.0",
    "playwright>=1.61.0",
    "torch>=2.12.1",
    "torchvision>=0.27.0",
    "transformers>=5.12.1",
    "ultralytics>=8.4.84",
    "scikit-learn>=1.3.0",
    "facenet-pytorch>=2.5.3",
    "yt-dlp>=2026.7.4",
    "tqdm>=4.66.0",
    "imagehash>=4.3.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu132" }
torchvision = { index = "pytorch-cu132" }

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

